--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -8,6 +8,7 @@
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test auth</a>
+                <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test log</a>
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
                 </div>
@@ -34,12 +35,13 @@
     <script>
         let brokerBtn = document.getElementById("brokerBtn");
         let authBrokerBtn = document.getElementById("authBrokerBtn");
+        let logBtn = document.getElementById("logBtn");
         let output = document.getElementById("output");
         let sent = document.getElementById("payload")
         let received = document.getElementById("received")
 
 
-brokerBtn.addEventListener("click", function () {
+        brokerBtn.addEventListener("click", function () {
             const body = {
                 method: 'POST',
             }
@@ -97,5 +99,40 @@ brokerBtn.addEventListener("click", function () {
                 })
         })
 
+
+      logBtn.addEventListener("click", function () {
+
+            const payload = {
+                action: "log",
+                log: {
+                    name: "event",
+                    data: "Some kind of data",
+                }
+            }
+
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json");
+
+            const body = {
+                method: 'POST',
+                body: JSON.stringify(payload),
+                headers: headers,
+            }
+
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then(response => response.json())
+                .then(data => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
+                    } else {
+                        output.innerHTML += `<br><strong>Response from log service:</strong> ${data.message}`;
+                    }
+                })
+                .catch(error => {
+                    output.innerHTML += "<br><br><strong>Error: " + error;
+                })
+        })
     </script>
 {{end}}
