--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -9,6 +9,7 @@
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test auth</a>
                 <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test log</a>
+                <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test email</a>
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
                 </div>
@@ -39,6 +40,7 @@
         let output = document.getElementById("output");
         let sent = document.getElementById("payload")
         let received = document.getElementById("received")
+        let mailBtn = document.getElementById("mailBtn");
 
 
         brokerBtn.addEventListener("click", function () {
@@ -131,6 +133,44 @@
                     }
                 })
                 .catch(error => {
+                    output.innerHTML += "<br><br><strong>Error: " + error;
+                })
+        })
+   
+   mailBtn.addEventListener("click", function () {
+            const payload = {
+                action: "mail",
+                mail: {
+                    from: "me@here.com",
+                    to: "you@there.com",
+                    subject: "Test Email",
+                    message: "Hello, world! This is my test message."
+                }
+            }
+
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json");
+
+            const body = {
+                method: 'POST',
+                body: JSON.stringify(payload),
+                headers: headers,
+            }
+
+            // send request to main entrypoint for microservices
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        console.log(data.error)
+                        output.innerHTML += "<br><br><strong>Error: " + data.message;
+                    } else {
+                        output.innerHTML += `<br><strong>Response from mail service</strong>: ${data.message}`;
+                    }
+                })
+                .catch((error) => {
                     output.innerHTML += "<br><br><strong>Error: " + error;
                 })
         })
